--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,14 +3,15 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.2.2" />
+    <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.3.1" />
     <PackageVersion Include="CommunityToolkit.Labs.WinUI.Shimmer" Version="0.1.230830" />
-    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageVersion Include="CommunityToolkit.WinUI.Animations" Version="8.0.240109" />
-    <PackageVersion Include="CommunityToolkit.WinUI.Extensions" Version="8.0.240109" />
-    <PackageVersion Include="CommunityToolkit.WinUI.Media" Version="8.0.240109" />
-    <PackageVersion Include="ComputeSharp.D2D1.WinUI" Version="3.0.1" />
-    <PackageVersion Include="FluentIcons.WinUI" Version="1.1.249" />
+    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.3.1" />
+    <PackageVersion Include="CommunityToolkit.WinUI.Animations" Version="8.1.240916" />
+    <PackageVersion Include="CommunityToolkit.WinUI.Extensions" Version="8.1.240916" />
+    <PackageVersion Include="CommunityToolkit.WinUI.Media" Version="8.1.240916" />
+    <PackageVersion Include="ComputeSharp.D2D1" Version="3.1.0-alpha.10821677520" />
+    <PackageVersion Include="ComputeSharp.D2D1.WinUI" Version="3.1.0-alpha.10821677520" />
+    <PackageVersion Include="FluentIcons.WinUI" Version="1.1.258" />
     <PackageVersion Include="Microsoft.Bcl.HashCode" Version="1.1.1" />
     <PackageVersion Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Bcl.Numerics" Version="8.0.0" />
@@ -20,6 +21,7 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.CodeStyle" Version="4.4.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Metrics" Version="3.3.4" />
     <PackageVersion Include="Microsoft.Graphics.Win2D" Version="1.2.1-experimental2" />
+    <PackageVersion Include="Microsoft.Windows.CsWinRT" Version="2.1.3" />
     <PackageVersion Include="StyleCop.Analyzers" Version="1.1.118" />
     <PackageVersion Include="Microsoft.Bcl.TimeProvider" Version="8.0.1" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
@@ -54,7 +56,7 @@
     <PackageVersion Include="System.Threading.Channels" Version="8.0.0" />
     <PackageVersion Include="System.Threading.Tasks.Dataflow" Version="8.0.0" />
     <PackageVersion Include="Verify.Xunit" Version="23.5.2" />
-    <PackageVersion Include="WinUIEx" Version="2.3.4" />
+    <PackageVersion Include="WinUIEx" Version="2.4.0" />
     <PackageVersion Include="xunit" Version="2.7.0" />
     <PackageVersion Include="xunit.abstractions" Version="2.0.3" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.7" />
