--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,11 +4,12 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.3.1" />
-    <PackageVersion Include="CommunityToolkit.Labs.WinUI.Shimmer" Version="0.1.230830" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.3.1" />
     <PackageVersion Include="CommunityToolkit.WinUI.Animations" Version="8.1.240916" />
     <PackageVersion Include="CommunityToolkit.WinUI.Extensions" Version="8.1.240916" />
+    <PackageVersion Include="CommunityToolkit.WinUI.Helpers" Version="8.1.240916" />
     <PackageVersion Include="CommunityToolkit.WinUI.Media" Version="8.1.240916" />
+    <PackageVersion Include="CommunityToolkit.WinUI.Triggers" Version="8.1.240916" />
     <PackageVersion Include="ComputeSharp.D2D1" Version="3.1.0-alpha.10821677520" />
     <PackageVersion Include="ComputeSharp.D2D1.WinUI" Version="3.1.0-alpha.10821677520" />
     <PackageVersion Include="FluentIcons.WinUI" Version="1.1.258" />
