--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,6 +6,7 @@
     <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.3.1" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.3.1" />
     <PackageVersion Include="CommunityToolkit.WinUI.Animations" Version="8.1.240916" />
+    <PackageVersion Include="CommunityToolkit.WinUI.Controls.Sizers" Version="8.1.240916" />
     <PackageVersion Include="CommunityToolkit.WinUI.Extensions" Version="8.1.240916" />
     <PackageVersion Include="CommunityToolkit.WinUI.Helpers" Version="8.1.240916" />
     <PackageVersion Include="CommunityToolkit.WinUI.Media" Version="8.1.240916" />
