--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,14 +3,14 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.3.2" />
-    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.3.2" />
-    <PackageVersion Include="CommunityToolkit.WinUI.Animations" Version="8.1.240916" />
-    <PackageVersion Include="CommunityToolkit.WinUI.Controls.Sizers" Version="8.1.240916" />
-    <PackageVersion Include="CommunityToolkit.WinUI.Extensions" Version="8.1.240916" />
+    <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.4.0-preview2" />
+    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0-preview2" />
+    <PackageVersion Include="CommunityToolkit.WinUI.Animations" Version="8.2.241112-preview1" />
+    <PackageVersion Include="CommunityToolkit.WinUI.Controls.Sizers" Version="8.2.241112-preview1" />
+    <PackageVersion Include="CommunityToolkit.WinUI.Extensions" Version="8.2.241112-preview1" />
     <PackageVersion Include="CommunityToolkit.WinUI.Helpers" Version="8.1.240916" />
-    <PackageVersion Include="CommunityToolkit.WinUI.Media" Version="8.1.240916" />
-    <PackageVersion Include="CommunityToolkit.WinUI.Triggers" Version="8.1.240916" />
+    <PackageVersion Include="CommunityToolkit.WinUI.Media" Version="8.2.241112-preview1" />
+    <PackageVersion Include="CommunityToolkit.WinUI.Triggers" Version="8.2.241112-preview1" />
     <PackageVersion Include="ComputeSharp.D2D1" Version="3.1.0-alpha.10821677520" />
     <PackageVersion Include="ComputeSharp.D2D1.WinUI" Version="3.1.0-alpha.10821677520" />
     <PackageVersion Include="FluentIcons.WinUI" Version="1.1.265" />
@@ -22,8 +22,8 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.CodeStyle" Version="4.4.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Metrics" Version="3.3.4" />
-    <PackageVersion Include="Microsoft.Graphics.Win2D" Version="1.2.1-experimental2" />
-    <PackageVersion Include="Microsoft.Windows.CsWinRT" Version="2.1.3" />
+    <PackageVersion Include="Microsoft.Graphics.Win2D" Version="1.3.0" />
+    <PackageVersion Include="Microsoft.Windows.CsWinRT" Version="2.2.0" />
     <PackageVersion Include="StyleCop.Analyzers" Version="1.1.118" />
     <PackageVersion Include="Microsoft.Bcl.TimeProvider" Version="8.0.1" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
@@ -58,7 +58,7 @@
     <PackageVersion Include="System.Threading.Channels" Version="8.0.0" />
     <PackageVersion Include="System.Threading.Tasks.Dataflow" Version="8.0.0" />
     <PackageVersion Include="Verify.Xunit" Version="23.5.2" />
-    <PackageVersion Include="WinUIEx" Version="2.4.0" />
+    <PackageVersion Include="WinUIEx" Version="2.4.2" />
     <PackageVersion Include="xunit" Version="2.7.0" />
     <PackageVersion Include="xunit.abstractions" Version="2.0.3" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.7" />
@@ -72,7 +72,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageVersion Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.10.48" />
+    <PackageVersion Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.12.19" />
     <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
