--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,17 +3,17 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.4.0-preview2" />
-    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0-preview2" />
+    <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.4.0-preview3" />
+    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0-preview3" />
     <PackageVersion Include="CommunityToolkit.WinUI.Animations" Version="8.2.241112-preview1" />
     <PackageVersion Include="CommunityToolkit.WinUI.Controls.Sizers" Version="8.2.241112-preview1" />
     <PackageVersion Include="CommunityToolkit.WinUI.Extensions" Version="8.2.241112-preview1" />
     <PackageVersion Include="CommunityToolkit.WinUI.Helpers" Version="8.1.240916" />
     <PackageVersion Include="CommunityToolkit.WinUI.Media" Version="8.2.241112-preview1" />
     <PackageVersion Include="CommunityToolkit.WinUI.Triggers" Version="8.2.241112-preview1" />
-    <PackageVersion Include="ComputeSharp.D2D1" Version="3.1.0-alpha.10821677520" />
-    <PackageVersion Include="ComputeSharp.D2D1.WinUI" Version="3.1.0-alpha.10821677520" />
-    <PackageVersion Include="FluentIcons.WinUI" Version="1.1.265" />
+    <PackageVersion Include="ComputeSharp.D2D1" Version="3.1.0-preview2" />
+    <PackageVersion Include="ComputeSharp.D2D1.WinUI" Version="3.1.0-preview2" />
+    <PackageVersion Include="FluentIcons.WinUI" Version="1.1.266" />
     <PackageVersion Include="Microsoft.Bcl.HashCode" Version="1.1.1" />
     <PackageVersion Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Bcl.Numerics" Version="8.0.0" />
@@ -27,7 +27,7 @@
     <PackageVersion Include="StyleCop.Analyzers" Version="1.1.118" />
     <PackageVersion Include="Microsoft.Bcl.TimeProvider" Version="8.0.1" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.3233" />
+    <PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
     <PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.6.241114003" />
     <PackageVersion Include="System.Diagnostics.DiagnosticSource" Version="8.0.1" />
     <PackageVersion Include="System.Linq.Async" Version="6.0.1" />
@@ -58,7 +58,7 @@
     <PackageVersion Include="System.Threading.Channels" Version="8.0.0" />
     <PackageVersion Include="System.Threading.Tasks.Dataflow" Version="8.0.0" />
     <PackageVersion Include="Verify.Xunit" Version="23.5.2" />
-    <PackageVersion Include="WinUIEx" Version="2.4.2" />
+    <PackageVersion Include="WinUIEx" Version="2.5.0" />
     <PackageVersion Include="xunit" Version="2.7.0" />
     <PackageVersion Include="xunit.abstractions" Version="2.0.3" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.7" />
