--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,8 +3,8 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.4.0-preview3" />
-    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0-preview3" />
+    <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.4.0" />
+    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageVersion Include="CommunityToolkit.WinUI.Animations" Version="8.2.241112-preview1" />
     <PackageVersion Include="CommunityToolkit.WinUI.Controls.Sizers" Version="8.2.241112-preview1" />
     <PackageVersion Include="CommunityToolkit.WinUI.Extensions" Version="8.2.241112-preview1" />
@@ -13,7 +13,7 @@
     <PackageVersion Include="CommunityToolkit.WinUI.Triggers" Version="8.2.241112-preview1" />
     <PackageVersion Include="ComputeSharp.D2D1" Version="3.1.0-preview2" />
     <PackageVersion Include="ComputeSharp.D2D1.WinUI" Version="3.1.0-alpha.12101753322" />
-    <PackageVersion Include="FluentIcons.WinUI" Version="1.1.266" />
+    <PackageVersion Include="FluentIcons.WinUI" Version="1.1.271" />
     <PackageVersion Include="Microsoft.Bcl.HashCode" Version="1.1.1" />
     <PackageVersion Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Bcl.Numerics" Version="8.0.0" />
@@ -22,7 +22,7 @@
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.CodeStyle" Version="4.4.0" />
     <PackageVersion Include="Microsoft.CodeAnalysis.Metrics" Version="3.3.4" />
-    <PackageVersion Include="Microsoft.Graphics.Win2D" Version="1.3.0" />
+    <PackageVersion Include="Microsoft.Graphics.Win2D" Version="1.3.1" />
     <PackageVersion Include="Microsoft.Web.WebView2" Version="1.0.2903.40" />
     <PackageVersion Include="Microsoft.Windows.CsWinRT" Version="2.2.0" />
     <PackageVersion Include="StyleCop.Analyzers" Version="1.1.118" />
