--- a/src/WinUIKernel.AI/WinUIKernel.AI.csproj
+++ b/src/WinUIKernel.AI/WinUIKernel.AI.csproj
@@ -43,9 +43,17 @@
     <None Remove="DrawModelCard\DrawModelCard.xaml" />
     <None Remove="Draw\AzureOpenAIDrawSettingControl.xaml" />
     <None Remove="Draw\ErnieDrawSettingControl.xaml" />
+    <None Remove="Draw\HunyuanDrawSettingControl.xaml" />
+    <None Remove="Draw\SparkDrawSettingControl.xaml" />
     <None Remove="PredefinedAudioModelSection.xaml" />
     <None Remove="PredefinedChatModelSection.xaml" />
     <None Remove="PredefinedDrawModelSection.xaml" />
+    <None Remove="Translate\AliTranslateSettingControl.xaml" />
+    <None Remove="Translate\AzureTranslateSettingControl.xaml" />
+    <None Remove="Translate\BaiduTranslateSettingControl.xaml" />
+    <None Remove="Translate\TencentTranslateSettingControl.xaml" />
+    <None Remove="Translate\VolcanoTranslateSettingControl.xaml" />
+    <None Remove="Translate\YoudaoTranslateSettingControl.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -85,6 +93,48 @@
   
   <ItemGroup>
     <ProjectReference Include="..\WinUIKernel.Share\WinUIKernel.Share.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Page Update="Translate\VolcanoTranslateSettingControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Page Update="Translate\YoudaoTranslateSettingControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Page Update="Translate\TencentTranslateSettingControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Page Update="Translate\BaiduTranslateSettingControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Page Update="Translate\AliTranslateSettingControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Page Update="Draw\SparkDrawSettingControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Page Update="Draw\HunyuanDrawSettingControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   
   <ItemGroup>
@@ -203,6 +253,12 @@
 
   <ItemGroup>
     <Page Update="DrawModelCard\DrawModelCard.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Translate\AzureTranslateSettingControl.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
