--- a/src/Samples/AISample/AISample.csproj
+++ b/src/Samples/AISample/AISample.csproj
@@ -40,7 +40,7 @@
     <PackageReference Include="Richasy.WinUIKernel.AI" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="C:\Users\zrich\.nuget\packages\richasy.winuikernel.ai\0.0.1-preview1\contentFiles\any\net9.0-windows10.0.22621\Assets\**\*">
+    <None Update="$(UserProfile)\.nuget\packages\richasy.winuikernel.ai\*\contentFiles\any\net9.0-windows10.0.22621\Assets\**\*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
@@ -63,8 +63,9 @@
   <PropertyGroup>
     <PublishReadyToRun Condition="'$(Configuration)' == 'Debug'">False</PublishReadyToRun>
     <PublishReadyToRun Condition="'$(Configuration)' != 'Debug'">True</PublishReadyToRun>
-    <PublishAot Condition="'$(Configuration)' == 'Debug'">False</PublishAot>
+    <PublishAot Condition="'$(Configuration)' == 'Debug'">True</PublishAot>
     <PublishAot Condition="'$(Configuration)' != 'Debug'">True</PublishAot>
-    <DefaultLanguage>zh-CN</DefaultLanguage>
+    <DefaultLanguage>en-US</DefaultLanguage>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 </Project>
